Added product branding. #332
Including application icon, splash screen, and welcome page.

--- a/org.lflang.product/build.properties
+++ b/org.lflang.product/build.properties
@@ -1,1 +1,5 @@
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               icons/,\
+               plugin_customization.ini,\
+               splash.bmp,\
+               intro/
