--- a/org.lflang.product/plugin.xml
+++ b/org.lflang.product/plugin.xml
@@ -8,12 +8,45 @@
       <product
             name="Lingua Franca"
             application="org.eclipse.ui.ide.workbench">
+         <property
+               name="appName"
+               value="Lingua Franca">
+         </property>
+         <property
+               name="windowImages"
+               value="icons/lf-logo-16px.png,icons/lf-logo-32px.png,icons/lf-logo-48px.png,icons/lf-logo-64px.png,icons/lf-logo-128px.png,icons/lf-logo-256px.png">
+         </property>
+         <property
+               name="startupProgressRect"
+               value="0,315,500,15">
+         </property>
+         <property
+               name="startupForegroundColor"
+               value="FFFFFF">
+         </property>
+         <property
+               name="startupMessageRect"
+               value="10,300,480,15">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
+         </property>
+         <property
+               name="aboutImage"
+               value="icons/lf-logo.png">
+         </property>
+         <property
+               name="aboutText"
+               value="Lingua Franca&#x0A;A coordination language for defining and composing reactors.&#x0A;&#x0A;For more information, visit us on GitHub: https://github.com/icyphy/lingua-franca">
+         </property>
       </product>
    </extension>
    <extension
          point="org.eclipse.ui.perspectives">
       <perspective
             class="org.lflang.product.LFPerspectiveFactory"
+            icon="icons/lf-logo-64px.png"
             id="org.lflang.product.perspective"
             name="Lingua Franca">
       </perspective>
@@ -40,5 +73,32 @@
          </enablement>
       </commonWizard>
    </extension>
-   
+   <extension
+         point="org.eclipse.ui.intro">
+      <intro
+            class="org.eclipse.ui.intro.config.CustomizableIntroPart"
+            icon="icons/lf-logo-16px.png"
+            id="org.lflang.product.intro">
+      </intro>
+      <introProductBinding
+            introId="org.lflang.product.intro"
+            productId="org.lflang.product.lfrca">
+      </introProductBinding>
+   </extension>
+   <extension
+         point="org.eclipse.ui.intro.config">
+      <config
+            content="intro/content.xml"
+            id="org.lflang.product.introConfigId"
+            introId="org.lflang.product.intro">
+         <presentation
+               home-page-id="root">
+            <implementation
+                  kind="html"
+                  os="win32,linux,macosx"
+                  style="intro/css/style.css">
+            </implementation>
+         </presentation>
+      </config>
+   </extension>
 </plugin>
