--- a/org.lflang.ui/build.properties
+++ b/org.lflang.ui/build.properties
@@ -4,5 +4,6 @@ source.. = src/,\
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
-               about.html
+               about.html,\
+               icons/
 bin.excludes = **/*.xtend
