build: Fixed branding in actual product.

--- a/org.lflang.product/build.properties
+++ b/org.lflang.product/build.properties
@@ -1,5 +1,9 @@
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
+               .,\
                icons/,\
                plugin_customization.ini,\
                splash.bmp,\
-               intro/
+               intro/,\
+               plugin.xml
