Second attempt at installing the RTI on Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,7 @@ jobs:
           cd build
           cmake ../
           make
-          make install
+          sudo make install
       - name: Run C tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.*
