--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -1,11 +1,9 @@
 name: Nightly Build
 
-# trigger the workflow every day at midnight & on releases
+# trigger the workflow every day at midnight (UTC)
 on:
   schedule:
     - cron: '0 0 * * *'
-  #release:
-    #types: [created]
 
 jobs:
   package:
@@ -14,10 +12,6 @@ jobs:
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Install jq # for pruning old release assets
-        run: |
-          sudo apt update
-          sudo apt -y install jq
       # Setup Build dependencies
       - name: Setup Java JDK
         uses: actions/setup-java@v2
@@ -28,11 +22,12 @@ jobs:
         uses: stCarolas/setup-maven@v4
         with:
           maven-version: 3.8.1
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1
 
       # Checks-out the repository under $GITHUB_WORKSPACE, so the job can access it
       - uses: actions/checkout@v2
+
+      - name: Gradle Wrapper Validation
+        uses: gradle/wrapper-validation-action@v1
 
       ## Build products
       - name: Build the lfc compiler
@@ -42,24 +37,13 @@ jobs:
       - name: Package IDE
         run: mvn package
 
-      # delete old assets
-      - name: Delete old release assets
-        run: .github/scripts/delete_old_nightly_assets.sh
-        env: 
-          GITHUB_TOKEN: ${{ secrets.NIGHTLY_BUILD }}
-      # create a new release with the nightly builds.
-      - name: Create Nightly Release
-        uses: ncipollo/release-action@v1
+      - name: Deploy release
+        uses: marvinpinto/action-automatic-releases@latest
         with:
-          allowUpdates: true # overwrite existing releases by that name
-          artifactErrorsFailBuild: true # no artifacts? No nightly.
-          artifacts: "org.lflang.rca/target/products/*.tar.gz,org.lflang.rca/target/products/*.zip,build_upload/*"
-          body: "## Epoch IDE Nightly Build
-
-This is the continuously updated Nightly release of the Lingua Franca IDE, Epoch.
-Expect instabilities and bugs; use at your own discretion."
-          commit: master
-          tag: nightly
-          name: "Epoch IDE Nightly Release"
+          repo_token: "${{ secrets.NIGHTLY_BUILD }}"
+          automatic_release_tag: 'nightly'
           prerelease: true
-          token: ${{ secrets.NIGHTLY_BUILD }}
+          files: |
+            org.lflang.rca/target/products/*.tar.gz
+            org.lflang.rca/target/products/*.zip
+            build_upload/*
