--- a/org.lflang.rca/pom.xml
+++ b/org.lflang.rca/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.1.0-SNAPSHOT</version>
 	<artifactId>org.lflang.rca</artifactId>
 	<packaging>eclipse-repository</packaging>
-	<name>Lingua Franca RCA</name>
+	<name>Epoch IDE</name>
 
 	<build>
 		<plugins>
@@ -55,7 +55,7 @@
 						<product>
 							<id>org.lflang.rca</id>
 							<rootFolder>lflang</rootFolder>
-							<archiveFileName>lingua_franca_rca_${buildQualifier}</archiveFileName>
+							<archiveFileName>epoch_ide_${buildQualifier}</archiveFileName>
 						</product>
 					</products>
 				</configuration>
