--- a/org.lflang.rca/pom.xml
+++ b/org.lflang.rca/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.1.0-SNAPSHOT</version>
 	<artifactId>org.lflang.rca</artifactId>
 	<packaging>eclipse-repository</packaging>
-	<name>Epoch IDE</name>
+	<name>Lingua Franca Epoch IDE</name>
 
 	<build>
 		<plugins>
