--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,15 @@ name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: [push, pull_request]
-  # push:
-  #   branches: [ master ]
-  # pull_request:
-  #   branches: [ master ]
+on:
+  push:
+    branches:
+      - '**'
+    branches-ignore:
+      - 'nightly'
+  pull_request:
+    branches:
+      - '**'
 
 env:
   # 2020.11
