--- a/org.lflang.product/plugin.xml
+++ b/org.lflang.product/plugin.xml
@@ -6,11 +6,11 @@
          id="lfrca"
          point="org.eclipse.core.runtime.products">
       <product
-            name="Lingua Franca"
+            name="Epoch IDE"
             application="org.eclipse.ui.ide.workbench">
          <property
                name="appName"
-               value="Lingua Franca">
+               value="Epoch">
          </property>
          <property
                name="windowImages"
@@ -29,16 +29,16 @@
                value="10,300,480,15">
          </property>
          <property
-               name="preferenceCustomization"
-               value="plugin_customization.ini">
-         </property>
-         <property
                name="aboutImage"
                value="icons/lf-logo.png">
          </property>
          <property
                name="aboutText"
                value="Lingua Franca&#x0A;A coordination language for defining and composing reactors.&#x0A;&#x0A;For more information, visit us on GitHub: https://github.com/icyphy/lingua-franca">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
          </property>
       </product>
    </extension>
