--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,7 +212,8 @@ jobs:
       - name: Run Python tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
-
+  
+  benchmark-tests:
     runs-on: ubuntu-latest
     env:
       LF_PATH: ${{ env.GITHUB_WORKSPACE }}
