Activated spaces for tabs preference by default in product #484

--- a/org.lflang.product/plugin_customization.ini
+++ b/org.lflang.product/plugin_customization.ini
@@ -5,5 +5,7 @@ org.eclipse.ui/defaultPerspectiveId=org.lflang.product.perspective
 
 # Show line numbers
 org.eclipse.ui.editors/lineNumberRuler = true
+# Spaces for tabs
+org.eclipse.ui.editors/spacesForTabs = true
 # UTF-8 encoding as standard
 org.eclipse.core.resources/encoding = UTF-8
