Check out runtime within CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -230,6 +230,8 @@ jobs:
           rust-version: ${{ matrix.rust }}
           components: clippy
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive # check out runtime as well
       - name: Run Rust tests
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.RustTest.*
