--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         uses: codecov/codecov-action@v2.1.0 
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos 
-          files: $GITHUB_WORKSPACE/org.lflang.tests/build/reports/xml/jacoco
+          file: org.lflang.tests/build/reports/xml/jacoco
           # gcov_prefix: 
           # optional flags: unittests 
           # optional name: codecov-umbrella 
