--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,11 @@ jobs:
 #           vcpkgGitCommitId: $(vcpkgGitRef)
 #           vcpkgGitURL: https://github.com/microsoft/vcpkg/
 #         if: runner.os == 'Windows'
+      - name: "Update Windows SDK"
+        uses: fbactions/setup-winsdk@v1
+        with:
+          winsdk-build-version: 19041
+        if: runner.os == 'Windows'
       - name: Install RTI;
         run: |
           cd org.lflang/src/lib/core/federated/RTI
