Added test script for lfc (no idea what it will do on Windows)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Run compiler tests
         run: |
           ./gradlew test --tests org.lflang.tests.compiler.*
+      - name: Test the `lfc` command line program
+        run: .github/scripts/test_lfc.sh
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0 
         with:
