--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,7 +142,7 @@ jobs:
       - name: Build RTI docker image;
         run: |
           cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
-          docker build -t rti -f rti.Dockerfile ../../../core/
+          docker build -t rti:rti -f rti.Dockerfile ../../../core/
         if: ${{ runner.os == 'Linux' }}
       - name: Run C tests;
         run: |
@@ -179,6 +179,11 @@ jobs:
           make
           sudo make install
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
+      - name: Build RTI docker image;
+        run: |
+          cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
+          docker build -t rti:rti -f rti.Dockerfile ../../../core/
+        if: ${{ runner.os == 'Linux' }}
       - name: Run C tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CCppTest.*
