--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,61 +84,7 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
-        with:
-          # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
-          java-version: 11
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      # - name: Cache protobuf library # Thanks to https://lukasjoswiak.com/github-actions-protobuf/
-      #   id: cache-protobuf
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: protobuf
-      #     key: ${{ runner.os }}-protobuf
-      # - name: Build protobuf library
-      #   if: steps.cache-protobuf.outputs.cache-hit != 'true'
-      #   run: |
-      #     git clone https://github.com/protocolbuffers/protobuf.git
-      #     cd protobuf
-      #     git submodule update --init --recursive
-      #     ./autogen.sh
-      #     ./autogen.sh
-      #     ./configure
-      #     make
-      #     make check
-      # - name: Install protobuf library
-      #   run: |
-      #     cd protobuf
-      #     sudo make install
-      #     sudo ldconfig
-      - name: Install Dependencies Ubuntu
-        run: sudo apt-get install libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
-        if: runner.os == 'Linux'
-      - name: Install Dependencies OS X
-        run: |
-          brew install protobuf
-          brew install protobuf-c
-          brew install coreutils
-        if: runner.os == 'macOS'
-#       - name: Install Dependencies Windows
-#         uses: lukka/run-vcpkg@v4
-#         with:
-#           vcpkgArguments: 'protobuf'
-#           vcpkgGitCommitId: $(vcpkgGitRef)
-#           vcpkgGitURL: https://github.com/microsoft/vcpkg/
-#         if: runner.os == 'Windows'
-      - name: Install RTI;
-        run: |
-          cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
-          mkdir build
-          cd build
-          cmake ../
-          make
-          sudo make install
-        if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
+      - uses: lf-lang/lingua-franca/.github/workflows/c-target-setup.yml
       - name: Run C tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.*
