--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: lf-lang/lingua-franca/.github/workflows/c-target-setup.yml
+      - uses: lf-lang/lingua-franca/.github/workflows/c-target-setup.yml@ba57bc89d8af8f713c525b6c33f43e5038778557
       - name: Run C tests;
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.*
