--- a/.github/workflows/run-c-tests.yml
+++ b/.github/workflows/run-c-tests.yml
@@ -23,11 +23,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+          fetch-depth: 0
       - name: Fetch particular runtime version
         run: |
           pushd org.lflang/src/lib/c/reactor-c
-          git fetch --all
-          git checkout -f ${{ inputs.runtime-ref }}
+          git remote update
+          git checkout ${{ inputs.runtime-ref }}
           popd
         if: ${{ inputs.runtime-ref }}
       - name: Install Dependencies Ubuntu
