--- a/.github/workflows/run-c-tests.yml
+++ b/.github/workflows/run-c-tests.yml
@@ -23,10 +23,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Fetch particular runtime version
+          fetch-depth: 0 # NOTE: if this parameter is not used, fetching an alternative runtime fails.
+      - name: Fetch alternative runtime version (if specified)
         run: |
           pushd org.lflang/src/lib/c/reactor-c
-          git remote update
+          git fetch --all
           git checkout ${{ inputs.runtime-ref }}
           popd
         if: ${{ inputs.runtime-ref }}
