--- a/.github/workflows/run-c-tests.yml
+++ b/.github/workflows/run-c-tests.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   setup-env:
-    name: Prepare environment and run C tests
+    name: Run C tests
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
+      - uses: lf-lang/lingua-franca/.github/actions/install-jdk.yml@a3532e0649c82a6c01bfa1d8cfee38cb4e190a77
       - name: Setup Java JDK
         uses: actions/setup-java@v1.4.3
         with:
@@ -24,23 +25,23 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0 # NOTE: if this parameter is not used, fetching an alternative runtime fails.
-      - name: Fetch alternative runtime version (if specified)
+      - name: Use alternative runtime version
         run: |
           pushd org.lflang/src/lib/c/reactor-c
           git fetch --all
           git checkout ${{ inputs.runtime-ref }}
           popd
         if: ${{ inputs.runtime-ref }}
-      - name: Install Dependencies Ubuntu
+      - name: Install dependencies Ubuntu
         run: sudo apt-get install libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
         if: runner.os == 'Linux'
-      - name: Install Dependencies OS X
+      - name: Install dependencies OS X
         run: |
           brew install protobuf
           brew install protobuf-c
           brew install coreutils
         if: runner.os == 'macOS'
-      - name: Install RTI;
+      - name: Install RTI
         run: |
           cd org.lflang/src/lib/c/reactor-c/core/federated/RTI
           mkdir build
@@ -49,6 +50,6 @@ jobs:
           make
           sudo make install
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
-      - name: Run C tests;
+      - name: Perform tests
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.*
